Fixed parallax 1 not showing image.  Added flex-width and height to allow skip cropping

--- a/style.css
+++ b/style.css
@@ -378,12 +378,12 @@ h1[id*="-heading"]:after {
 }
 .parallax1 {
   /* background image */
-  background-image: url("images/hero_1.2.jpg");
+  /* background-image: url("images/hero_1.2.jpg"); */
 
 }
 .parallax2 {
   /* background image */
-  background-image: url("images/operaHouse1.png");
+  /* background-image: url("images/operaHouse1.png");s */
 
 
 }
